--- a/style.css
+++ b/style.css
@@ -19,5 +19,11 @@ width: 50px;
 height:50px;
 background-color: lightgray;
 }
+.red {
+background-color: firebrick;
+} 
+.green {
+background-color: forestgreen;
+}
 
 /* your CSS below! */
